--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -328,22 +328,28 @@
       <div class="content-info">
         <ul class="info-inner">
           <li>
-            <a href="#"><img src="./image/icon-quick1.svg" alt="" /></a>
+            <a href="#"
+              ><img src="./image/icon-quick1.svg" alt="" />정답 및 해설</a
+            >
           </li>
           <li>
-            <a href="#"><img src="./image/icon-quick2.svg" alt="" /></a>
+            <a href="#"><img src="./image/icon-quick2.svg" alt="" />정오표</a>
           </li>
           <li>
-            <a href="#"><img src="./image/icon-quick3.svg" alt="" /></a>
+            <a href="#"><img src="./image/icon-quick3.svg" alt="" />듣기자료</a>
           </li>
           <li>
-            <a href="#"><img src="./image/icon-quick4.svg" alt="" /></a>
+            <a href="#"
+              ><img src="./image/icon-quick4.svg" alt="" />교사용 자료</a
+            >
           </li>
           <li>
-            <a href="#"><img src="./image/icon-quick5.svg" alt="" /></a>
+            <a href="#"
+              ><img src="./image/icon-quick5.svg" alt="" />총판 안내</a
+            >
           </li>
           <li>
-            <a href="#"><img src="./image/icon-quick6.svg" alt="" /></a>
+            <a href="#"><img src="./image/icon-quick6.svg" alt="" />FAQ</a>
           </li>
         </ul>
       </div>
@@ -534,200 +540,202 @@
       </div>
       <div class="content-bestseller">
         <div class="bg"></div>
-        <div class="select-btn">
-          <span class="title">베스트 셀러</span>
-          <span id="grade">
-            <span>초등</span>
-            <span>중등</span>
-            <span>고등</span>
-            <span>단행본</span>
-          </span>
-        </div>
-        <div class="slide-wrap">
-          <div class="slide-btn bestseller-btn">
-            <span class="prev"
-              ><svg
-                width="18"
-                height="18"
-                viewBox="0 0 18 18"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M11.0918 8.99219L6.88416 4.78455"
-                  stroke="#111111"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M11.0918 9.02344L6.88416 13.2311"
-                  stroke="#111111"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </span>
-            <span class="next"
-              ><svg
-                width="18"
-                height="18"
-                viewBox="0 0 18 18"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M11.0918 8.99219L6.88416 4.78455"
-                  stroke="#111111"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-                <path
-                  d="M11.0918 9.02344L6.88416 13.2311"
-                  stroke="#111111"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-              </svg>
+        <div class="best-wrap">
+          <div class="select-btn">
+            <span class="title">베스트 셀러</span>
+            <span id="grade">
+              <span>초등</span>
+              <span>중등</span>
+              <span>고등</span>
+              <span>단행본</span>
             </span>
           </div>
-          <div class="item low">
-            <div class="slide-item">
-              <img src="./image/XL_231218121029501.jpg" alt="" />
-              <h2>이서윤쌤의 초등 한자 어휘 끝내기 1단계</h2>
+          <div class="slide-wrap">
+            <div class="slide-btn bestseller-btn">
+              <span class="prev"
+                ><svg
+                  width="18"
+                  height="18"
+                  viewBox="0 0 18 18"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M11.0918 8.99219L6.88416 4.78455"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M11.0918 9.02344L6.88416 13.2311"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
+              <span class="next"
+                ><svg
+                  width="18"
+                  height="18"
+                  viewBox="0 0 18 18"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M11.0918 8.99219L6.88416 4.78455"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M11.0918 9.02344L6.88416 13.2311"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
             </div>
-            <div class="slide-item">
-              <img src="./image/600x800_231113132408511.png" alt="" />
-              <h2>이서윤쌤의 초등한자어휘 일력</h2>
+            <div class="item low">
+              <div class="slide-item">
+                <img src="./image/XL_231218121029501.jpg" alt="" />
+                <h2>이서윤쌤의 초등 한자 어휘 끝내기 1단계</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/600x800_231113132408511.png" alt="" />
+                <h2>이서윤쌤의 초등한자어휘 일력</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/레벨1_표1_231227165809845.jpg" alt="" />
+                <h2>초등영문법 문장의 원리 Level 1</h2>
+              </div>
+              <div class="slide-item">
+                <img
+                  src="./image/600x800_2_EA_B6_8C_231113094316587.jpg"
+                  alt=""
+                />
+                <h2>뭔말 국어 용어 200 2권</h2>
+              </div>
+              <div class="slide-item">
+                <img
+                  src="./image/600x800_2_EA_B6_8C_231110153429381.jpg"
+                  alt=""
+                />
+                <h2>뭔말 과학 용어 200 2권</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/595x800_231117094745998.jpg" alt="" />
+                <h2>스도쿠로 익히는 초등 필수 고사성어 100</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/550x800_02_231114153946164.jpg" alt="" />
+                <h2>1일 1독해 우리 고전 50 2권 교과서 고전문학</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/550x800_01_231114141954867.jpg" alt="" />
+                <h2>1일 1독해 세상을 바꾼 인물 100 1권 문화·예술</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/550x800_231113101115729.jpg" alt="" />
+                <h2>용돈 잘 쓰는 법</h2>
+              </div>
             </div>
-            <div class="slide-item">
-              <img src="./image/레벨1_표1_231227165809845.jpg" alt="" />
-              <h2>초등영문법 문장의 원리 Level 1</h2>
+            <div class="item middle">
+              <div class="slide-item">
+                <img src="./image/600x800_231113104453166.jpg" alt="" />
+                <h2>완쏠 개념 중등수학 1-1 (2025년)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/550x800_231113115816604.jpg" alt="" />
+                <h2>백신 과학 중등 1-1 (2023년)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/600x800_01_231114112433716.jpg" alt="" />
+                <h2>메가스터디 중학 국어 비문학 독해 연습 1권</h2>
+              </div>
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
             </div>
-            <div class="slide-item">
-              <img
-                src="./image/600x800_2_EA_B6_8C_231113094316587.jpg"
-                alt=""
-              />
-              <h2>뭔말 국어 용어 200 2권</h2>
+            <div class="item high">
+              <div class="slide-item">
+                <img
+                  src="./image/N제 영어_독해_표1_231220115357493 (1).jpg"
+                  alt=""
+                />
+                <h2>메가스터디 N제 영어영역 독해 332제 (2024년)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/국어문학_표1_231208175413110.jpg" alt="" />
+                <h2>수능 기출 올픽 국어 문학 (2025 수능 대비)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/영어독해_표1_231208180211435.jpg" alt="" />
+                <h2>수능 기출 올픽 영어 독해 (2025 수능 대비)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/수학1_표1_231208175158881.jpg" alt="" />
+                <h2>수능 기출 올픽 수학1 (2025 수능 대비)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/600x800_231113151613438.jpg" alt="" />
+                <h2>괜찮아 어법</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/600x800_231113152547275.jpg" alt="" />
+                <h2>기출정식 고1 영어</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
+                <h2>메가스터디 수능 수학 킥(KICK) 수학1</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/550x800_231113180041391.jpg" alt="" />
+                <h2>백신 통합과학 (너의 만점을 위한 바람)</h2>
+              </div>
+              <div class="slide-item">
+                <img src="./image/600x800_231114171700828 (1).jpg" alt="" />
+                <h2>메가스터디 N제 과학탐구영역 지구과학1 285제</h2>
+              </div>
+              <div class="slide-item">
+                <img
+                  src="./image/N제 수학1_3점공략_표1_231220120328159.jpg"
+                  alt=""
+                />
+                <h2>메가스터디 N제 수학1 3점 공략 243제 (2024년)</h2>
+              </div>
             </div>
-            <div class="slide-item">
-              <img
-                src="./image/600x800_2_EA_B6_8C_231110153429381.jpg"
-                alt=""
-              />
-              <h2>뭔말 과학 용어 200 2권</h2>
+            <div class="item special">
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
+              <div class="slide-item">
+                <img src="" alt="" />
+                <h2></h2>
+              </div>
             </div>
-            <div class="slide-item">
-              <img src="./image/595x800_231117094745998.jpg" alt="" />
-              <h2>스도쿠로 익히는 초등 필수 고사성어 100</h2>
+            <div class="slide-bar">
+              <div class="inner-bar"></div>
             </div>
-            <div class="slide-item">
-              <img src="./image/550x800_02_231114153946164.jpg" alt="" />
-              <h2>1일 1독해 우리 고전 50 2권 교과서 고전문학</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/550x800_01_231114141954867.jpg" alt="" />
-              <h2>1일 1독해 세상을 바꾼 인물 100 1권 문화·예술</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/550x800_231113101115729.jpg" alt="" />
-              <h2>용돈 잘 쓰는 법</h2>
-            </div>
-          </div>
-          <div class="item middle">
-            <div class="slide-item">
-              <img src="./image/600x800_231113104453166.jpg" alt="" />
-              <h2>완쏠 개념 중등수학 1-1 (2025년)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/550x800_231113115816604.jpg" alt="" />
-              <h2>백신 과학 중등 1-1 (2023년)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/600x800_01_231114112433716.jpg" alt="" />
-              <h2>메가스터디 중학 국어 비문학 독해 연습 1권</h2>
-            </div>
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-          </div>
-          <div class="item high">
-            <div class="slide-item">
-              <img
-                src="./image/N제 영어_독해_표1_231220115357493 (1).jpg"
-                alt=""
-              />
-              <h2>메가스터디 N제 영어영역 독해 332제 (2024년)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/국어문학_표1_231208175413110.jpg" alt="" />
-              <h2>수능 기출 올픽 국어 문학 (2025 수능 대비)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/영어독해_표1_231208180211435.jpg" alt="" />
-              <h2>수능 기출 올픽 영어 독해 (2025 수능 대비)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/수학1_표1_231208175158881.jpg" alt="" />
-              <h2>수능 기출 올픽 수학1 (2025 수능 대비)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/600x800_231113151613438.jpg" alt="" />
-              <h2>괜찮아 어법</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/600x800_231113152547275.jpg" alt="" />
-              <h2>기출정식 고1 영어</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/595x800_띠지_231114102821522.jpg" alt="" />
-              <h2>메가스터디 수능 수학 킥(KICK) 수학1</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/550x800_231113180041391.jpg" alt="" />
-              <h2>백신 통합과학 (너의 만점을 위한 바람)</h2>
-            </div>
-            <div class="slide-item">
-              <img src="./image/600x800_231114171700828 (1).jpg" alt="" />
-              <h2>메가스터디 N제 과학탐구영역 지구과학1 285제</h2>
-            </div>
-            <div class="slide-item">
-              <img
-                src="./image/N제 수학1_3점공략_표1_231220120328159.jpg"
-                alt=""
-              />
-              <h2>메가스터디 N제 수학1 3점 공략 243제 (2024년)</h2>
-            </div>
-          </div>
-          <div class="item special">
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-            <div class="slide-item">
-              <img src="" alt="" />
-              <h2></h2>
-            </div>
-          </div>
-          <div class="slide-bar">
-            <div class="inner-bar"></div>
           </div>
         </div>
       </div>
@@ -864,9 +872,9 @@
           </a>
         </div>
       </div>
-      <div class="content-notice">
+      <div class="content-notice community">
         <h1>Community</h1>
-        <div class="notice-inner community">
+        <div class="community-inner">
           <a class="community-list" href="">
             <div class="left">
               <img src="./image/icon-insta.svg" alt="" />
