--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -197,131 +197,126 @@
           </div>
         </div>
       </header>
-      <div class="fixed-btn fit-book">
-        <img src="./image/icon-book.svg" alt="" />
-        <h4>맞춤 도서</h4>
-      </div>
       <div class="fixed-btn gotoTop">
         <img src="./image/icon-arrow copy.svg" alt="" />
       </div>
       <div class="content-slide">
-        <div class="slide">
-          <ul>
-            <div class="slide-btn">
-              <span class="prev"
-                ><svg
-                  width="18"
-                  height="18"
-                  viewBox="0 0 18 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M11.0918 8.99219L6.88416 4.78455"
-                    stroke="#111111"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                  <path
-                    d="M11.0918 9.02344L6.88416 13.2311"
-                    stroke="#111111"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </span>
-              <span class="next"
-                ><svg
-                  width="18"
-                  height="18"
-                  viewBox="0 0 18 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M11.0918 8.99219L6.88416 4.78455"
-                    stroke="#111111"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                  <path
-                    d="M11.0918 9.02344L6.88416 13.2311"
-                    stroke="#111111"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </span>
-            </div>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240319092743276.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240131090803470.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240125150716081.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240213173124056.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240130113122183.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240105093844171.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
-                  alt=""
-                /></li
-            ></a>
-            <a href="">
-              <li>
-                <img
-                  src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480__EC_8B_9C_EC_95_882_231116142420059.png"
-                  alt=""
-                /></li
-            ></a>
+        <div class="content-slide-wrap">
+          <div class="slide-btn">
+            <span class="prev first-prev"
+              ><svg
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M11.0918 8.99219L6.88416 4.78455"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M11.0918 9.02344L6.88416 13.2311"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </span>
+            <span class="next first-next"
+              ><svg
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M11.0918 8.99219L6.88416 4.78455"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M11.0918 9.02344L6.88416 13.2311"
+                  stroke="#111111"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </span>
+          </div>
+          <div class="current-page">
+            <span>2</span>
+            <span>|</span>
+            <span>9</span>
+          </div>
+          <ul class="slides">
+            <li>
+              <img
+                class="first-slide-img"
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240319092743276.png"
+                alt=""
+              />
+            </li>
 
-            <div class="current-page">
-              <span>2</span>
-              <span>|</span>
-              <span>9</span>
-            </div>
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240131090803470.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240125150716081.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240213173124056.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240130113122183.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_240105093844171.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480_231229104343443.png"
+                alt=""
+              />
+            </li>
+
+            <li>
+              <img
+                src="./image/_EB_A9_94_EC_9D_B8_EB_B0_B0_EB_84_88_1440x480__EC_8B_9C_EC_95_882_231116142420059.png"
+                alt=""
+              />
+            </li>
           </ul>
         </div>
       </div>
