--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -248,10 +248,10 @@
               </svg>
             </span>
           </div>
-          <div class="current-page">
-            <span>2</span>
+          <div class="pageNum">
+            <span id="currentNum"></span>
             <span>|</span>
-            <span>9</span>
+            <span id="lastNum"></span>
           </div>
           <ul class="slides">
             <li>
